# agentic-retrospective

./: .eslintrc.json  .gitignore  .npmignore  AGENTSKILLS.md  CLAUDE.md  README.md  SKILL.md  package-lock.json  package.json  plugin.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  telemetry_issue.yml
.github/workflows/: publish.yml
.progress/: gap-tasks.jsonl  rebuild-tasks.jsonl
commands/: run.md
docs/: REBUILD-COMPLETE.md  RETROSPECTIVE_PLUGIN_IMPROVEMENTS.md  TESTING.md  agentic-retrospective.md  agentsview-integration.md  entire-review.md  feedback-ideas.md  fixing-telemetry-gaps.md  rebuild-gaps.md  rebuild-plan.md  updates.md
docs/plans/: issue-18-plan.md  issue-19-plan.md  skills-best-practices-plan.md
memory/: constitution.md
references/: 3agent-strategy.md  agent-watch.md  fixing-telemetry-gaps.md  retro-sample.json  retro-sample.md
references/schemas/: feedback-log.json  prompt-log-v2.json
schemas/: decision-schema.json
scripts/: log-prompt.sh  log-tool.sh  micro-retro.sh  run-retrospective.sh  setup-project.sh
skills/agent-watch/: SKILL.md
skills/agentic-retrospective/: SKILL.md
skills/audit/: SKILL.md
skills/claude-best-practices/: SKILL.md
skills/conduct/: SKILL.md
skills/feedback/: SKILL.md
skills/micro-retrospective/: SKILL.md
skills/repair/: SKILL.md
skills/retrospective/: SKILL.md
src/: cli.ts  config.ts  index.ts  runner.ts  types.ts
test/: setup.ts
tests/: __init__.py  conftest.py  test_decision_analyzer.py  test_git_analyzer.py  test_human_insights.py  test_models.py  test_report_generator.py  test_runner.py  test_scoring.py
(+156 files in other folders)
