[project]
name = "agentic-retrospective"
version = "1.0.0"
description = "Evidence-based sprint retrospectives for human-agent collaboration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "jpoley" }]
keywords = ["retrospective", "agent", "telemetry", "claude", "agentskills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
agentic-retro = "agentic_retrospective.cli:cli"

[project.urls]
Homepage = "https://github.com/daax-dev/agentic-retrospective"
Repository = "https://github.com/daax-dev/agentic-retrospective"
Documentation = "https://agentskills.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_retrospective"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/skills",
    "/hooks",
    "/.claude-plugin",
    "/README.md",
    "/SKILL.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
